# RollingRequests

./: Cargo.toml  README.md
src/: lib.rs  rolling.rs
src/request/: mod.rs  request.rs
tests/: rolling.rs
