[package]
name = "rollingrequests"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["H0llyW00dzZ <h0llyw00dzz@pm.me>"]
rust-version = "1.85"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.31"
