[package]
name = "rollingrequests"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["H0llyW00dzZ <h0llyw00dzz@pm.me>"]
rust-version = "1.86"
description = "A Rust library for efficiently managing and executing HTTP requests with concurrency control"
repository = "https://github.com/H0llyW00dzZ/RollingRequests"
keywords = ["http", "requests", "concurrency", "rust", "async"]
categories = ["web-programming::http-client", "concurrency", "asynchronous", "network-programming", "development-tools::testing"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.31"
tempfile = "3.19.1"
